# apprentissage

./: Doxyfile  code.f90  const.mod  fghhf.f90  fol.py  gauss_elimination.mod  test.f95
include/: mon_module.mod
make/: Makefile
modulaire/main/: CMakeLists.txt  main.f90
modulaire/module/: module_so.f90
modulaire/notes/: cmake.txt  execution.txt
use lapack/: CMakeLists.txt  my_lapack.f90
